--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,7 @@ jobs:
           distribution: 'temurin'
           architecture: x64
 
+      - run: ls
+
       - name: Run the Maven verify phase
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn -f pom.xml --batch-mode --update-snapshots verify
