--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,23 @@ jobs:
   compile_release:
     runs-on: ubuntu-latest
     steps:
-      - name: Download 
+      - name: Checkout SporeModderFX
         uses: actions/checkout@v1
+        with:
+          repository: emd4600/SporeModder-FX
+          path: SporeModder-FX
+          fetch-depth: 0
 
+      - name: Checkout Updater
+        uses: actions/checkout@v1
+        with:
+          path: Updater
+
+      - name: Update reg_file.txt
+        uses: ./.github/workflows/update-names-reg.yaml
+        with:
+          file-name: reg_file.txt
+        
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
         with:
@@ -16,7 +30,7 @@ jobs:
           distribution: 'temurin'
           architecture: x64
 
-      - run: ls
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-      - name: Run the Maven verify phase
-        run: mvn -f pom.xml --batch-mode --update-snapshots verify
+# git log $(git describe --tags --abbrev=0)..HEAD --oneline --format=%s
