--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,40 @@ on: push
   #workflow_dispatch:
 
 jobs:
-  compile_release:
+  build_smfx:
+    name: Build SporeModder-FX
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout SporeModderFX
+      - name: Checkout SporeModder-FX
+        uses: actions/checkout@v4
+        with:
+          repository: emd4600/SporeModder-FX
+          
+      - name: Set up JDK 11 for x64
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          architecture: x64
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      - run: ls
+
+      - run: ls target
+
+      - name: Upload build
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: SporeModder-FX-jar
+          path: target/SporeModderFX.jar
+
+  build_updater:
+    name: Build updater
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout SporeModder-FX
         uses: actions/checkout@v4
         with:
           repository: emd4600/SporeModder-FX
@@ -19,9 +49,13 @@ jobs:
           path: Updater
 
       - name: Update reg_file.txt
-        uses: ./.github/workflows/update-names-reg.yaml
-        with:
-          file-name: reg_file.txt
+        run: bash collect_reg_changes.sh reg_file.txt >> Updater/src/sporemodder/updater/resources/reg_file.txt
+
+      - name: Update reg_property.txt
+        run: bash collect_reg_changes.sh reg_property.txt >> Updater/src/sporemodder/updater/resources/reg_property.txt
+
+      - name: Update reg_type.txt
+        run: bash collect_reg_changes.sh reg_type.txt >> Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
         
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
@@ -32,5 +66,14 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      - run: ls
+      - run: ls target
+
+      - name: Upload build
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: SporeModder-FX-Updater-jar
+          path: target/SporeModderFXUpdater.jar
 
 # git log $(git describe --tags --abbrev=0)..HEAD --oneline --format=%s
