--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,13 +51,13 @@ jobs:
       - run: pwd ; ls
 
       - name: Update reg_file.txt
-        run: bash collect_reg_changes.sh reg_file.txt # >> Updater/src/sporemodder/updater/resources/reg_file.txt
+        run: cd .. && bash Updater/collect_reg_changes.sh reg_file.txt # >> Updater/src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
-        run: bash collect_reg_changes.sh reg_property.txt >> Updater/src/sporemodder/updater/resources/reg_property.txt
+        run: cd .. && bash Updater/collect_reg_changes.sh reg_property.txt >> Updater/src/sporemodder/updater/resources/reg_property.txt
 
       - name: Update reg_type.txt
-        run: bash collect_reg_changes.sh reg_type.txt >> Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
+        run: cd .. && bash Updater/collect_reg_changes.sh reg_type.txt >> Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
         
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
