--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,13 @@ jobs:
     name: Build updater
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Updater
+        uses: actions/checkout@v1
+        with:
+          path: Updater
+
+      - run: pwd ; ls
+    
       - name: Checkout SporeModder-FX
         uses: actions/checkout@v4
         with:
@@ -45,21 +52,14 @@ jobs:
 
       - run: pwd ; ls
 
-      - name: Checkout Updater
-        uses: actions/checkout@v1
-        with:
-          path: Updater
-
-      - run: pwd ; ls
-
       - name: Update reg_file.txt
-        run: cd .. && bash Updater/collect_reg_changes.sh reg_file.txt # >> Updater/src/sporemodder/updater/resources/reg_file.txt
+        run: bash collect_reg_changes.sh reg_file.txt # >> src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
-        run: cd .. && bash Updater/collect_reg_changes.sh reg_property.txt >> Updater/src/sporemodder/updater/resources/reg_property.txt
+        run: bash collect_reg_changes.sh reg_property.txt >> src/sporemodder/updater/resources/reg_property.txt
 
       - name: Update reg_type.txt
-        run: cd .. && bash Updater/collect_reg_changes.sh reg_type.txt >> Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
+        run: bash collect_reg_changes.sh reg_type.txt >> src/sporemodder/updater/resources/reg_type_noforce.txt
         
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
