--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           path: Updater
-
-      - run: pwd ; ls
-    
+          
       - name: Checkout SporeModder-FX
         uses: actions/checkout@v4
         with:
@@ -50,10 +48,8 @@ jobs:
           path: SporeModder-FX
           fetch-depth: 0
 
-      - run: pwd ; ls
-
       - name: Update reg_file.txt
-        run: bash collect_reg_changes.sh reg_file.txt # >> src/sporemodder/updater/resources/reg_file.txt
+        run: bash collect_reg_changes.sh reg_file.txt >> src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
         run: bash collect_reg_changes.sh reg_property.txt >> src/sporemodder/updater/resources/reg_property.txt
@@ -78,6 +74,6 @@ jobs:
         uses: actions/upload-artifact@v3.1.3
         with:
           name: SporeModder-FX-Updater-jar
-          path: target/SporeModderFXUpdater.jar
+          path: target/sporemodderfx-updater-*.jar
 
 # git log $(git describe --tags --abbrev=0)..HEAD --oneline --format=%s
