--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: emd4600/SporeModder-FX
+          fetch-depth: 0
+
+      - name: Calculate release version
+        id: version_number
+        run: |
+          version=$(git describe --tags --abbrev=0 | cut -c2- )
+          echo "Version: $version"
+          echo "version=$version" >> $GITHUB_OUTPUT
           
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
@@ -20,17 +28,24 @@ jobs:
           architecture: x64
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B -Drevision="${{ steps.version_number.outputs.version }}" package --file pom.xml
 
       - run: ls
 
       - run: ls target
+      - run: ls shade
 
       - name: Upload build
         uses: actions/upload-artifact@v3.1.3
         with:
           name: SporeModder-FX-jar
           path: target/sporemodderfx-*.jar
+
+      - name: Upload build 2
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: SporeModder-FX-jar
+          path: shade/sporemodderfx.jar
 
   build_updater:
     name: Build updater
