--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
 
       - name: Calculate release version
         id: version_number
-        run: bash calculate_new_version.sh >> $GITHUB_OUTPUT
+        run: |
+          version=$( bash calculate_new_version.sh )
+          echo "version=$version" >> $GITHUB_OUTPUT
           
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
