--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B -Drevision="${{ steps.version_number.outputs.version }}" package --file pom.xml
 
-      - run: ls
-
-      - run: ls target
-      - run: ls shade
-
       - name: Upload build
-        uses: actions/upload-artifact@v3.1.3
-        with:
-          name: SporeModder-FX-jar
-          path: target/sporemodderfx-*.jar
-
-      - name: Upload build 2
         uses: actions/upload-artifact@v3.1.3
         with:
           name: SporeModder-FX-jar
@@ -48,6 +37,7 @@ jobs:
 
   build_updater:
     name: Build Updater
+    needs: build_smfx
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Updater
@@ -74,8 +64,11 @@ jobs:
       - name: Download SporeModderFX.jar
         uses: actions/download-artifact@v2.1.1
         with:
-          name: # optional
-          path: # optional
+          name: SporeModder-FX-jar
+          path: SporeModder-FX-jar
+
+      - name: Copy sporemodderfx.jar
+        run: mv SporeModder-FX-jar/sporemodderfx.jar src/sporemodder/updater/resources/SporeModderFX.jar
         
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
