--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,10 +83,62 @@ jobs:
       - run: ls
       - run: ls target
 
-      - name: Upload build
+      - name: Update release files
+        run: |
+          cp ../SporeModder-FX/reg_cnv.txt "SporeModder FX/reg_cnv.txt"
+          cp ../SporeModder-FX/reg_file.txt "SporeModder FX/reg_file.txt"
+          cp ../SporeModder-FX/reg_property.txt "SporeModder FX/reg_property.txt"
+          cp ../SporeModder-FX/reg_simulator.txt "SporeModder FX/reg_simulator.txt"
+          cp ../SporeModder-FX/reg_simulator_stub.txt "SporeModder FX/reg_simulator_stub.txt"
+          cp ../SporeModder-FX/reg_type.txt "SporeModder FX/reg_type.txt"
+          cp SporeModder-FX-jar/sporemodderfx.jar "SporeModder FX/SporeModderFX.jar"
+
+      - name: Generate release zip
+        run: zip -r "SporeModder FX.zip" "SporeModder FX"
+
+      - name: "Upload build: Updater"
         uses: actions/upload-artifact@v3.1.3
         with:
-          name: SporeModder-FX-Updater-jar
-          path: target/sporemodderfx-updater-*.jar
+          name: SporeModder-FX-Release
+          path: shade/SporeModderFX.Updater.jar
+          
+      - name: "Upload build: Release"
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: SporeModder-FX-Release
+          path: "SporeModder FX.zip"
+
+  publish_release:
+    name: Publish Release
+    needs: build_updater
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout SporeModder-FX
+        uses: actions/checkout@v4
+        with:
+          repository: emd4600/SporeModder-FX
+          fetch-depth: 0
+
+      - name: Generate changelog
+        run: |
+          message=$( git log $(git describe --tags --abbrev=0)..HEAD --oneline --format=%s )
+          version=$( bash calculate_new_version.sh )
+          echo "version=$version" >> $GITHUB_OUTPUT
+          echo "message=$message" >> $GITHUB_OUTPUT
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2.1.1
+        with:
+          name: SporeModder-FX-Release
+
+      - name: Release to GitHub
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          repository: emd4600/SporeModder-FX
+          name: SporeModder FX v${{ steps.version_number.outputs.version }}
+          tag_name: v${{ steps.version_number.outputs.version }}
+          body: ${{ steps.commit_message.outputs.message }}
+          files: SporeModderFX.Updater.jar "SporeModder FX.zip"
 
 # git log $(git describe --tags --abbrev=0)..HEAD --oneline --format=%s
