--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           path: SporeModder-FX-jar
 
       - name: Copy sporemodderfx.jar
-        run: mv SporeModder-FX-jar/sporemodderfx.jar src/sporemodder/updater/resources/SporeModderFX.jar
+        run: cp SporeModder-FX-jar/sporemodderfx.jar src/sporemodder/updater/resources/SporeModderFX.jar
         
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
