--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,13 +58,13 @@ jobs:
       - run: ls ..
 
       - name: Update reg_file.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_file.txt >> ../Updater/src/sporemodder/updater/resources/reg_file.txt
+        run: bash collect_reg_changes.sh reg_file.txt >> src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_property.txt >> ../Updater/src/sporemodder/updater/resources/reg_property.txt
+        run: bash collect_reg_changes.sh reg_property.txt >> src/sporemodder/updater/resources/reg_property.txt
 
       - name: Update reg_type.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_type.txt >> ../Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
+        run: bash collect_reg_changes.sh reg_type.txt >> src/sporemodder/updater/resources/reg_type_noforce.txt
 
       - name: Download SporeModderFX.jar
         uses: actions/download-artifact@v3
@@ -73,23 +73,18 @@ jobs:
           path: SporeModder-FX-jar
 
       - name: Copy sporemodderfx.jar
-        run: cp SporeModder-FX-jar/sporemodderfx.jar ../Updater/src/sporemodder/updater/resources/SporeModderFX.jar
-
-      - run: ls
-      - run: ls ../
-      - run: ls ../Updater
-      - run: ls "../Updater/SporeModder FX"
+        run: cp SporeModder-FX-jar/sporemodderfx.jar src/sporemodder/updater/resources/SporeModderFX.jar
 
       - name: Update release files
         run: |
-          cp reg_cnv.txt "../Updater/SporeModder FX/reg_cnv.txt"
-          cp reg_file.txt "../Updater/SporeModder FX/reg_file.txt"
-          cp reg_property.txt "../Updater/SporeModder FX/reg_property.txt"
-          cp reg_simulator.txt "../Updater/SporeModder FX/reg_simulator.txt"
-          cp reg_simulator_stub.txt "../Updater/SporeModder FX/reg_simulator_stub.txt"
-          cp reg_type.txt "../Updater/SporeModder FX/reg_type.txt"
-          cp SporeModder-FX-jar/sporemodderfx.jar "../Updater/SporeModder FX/SporeModderFX.jar"
-          \cp -r Styles "../Updater/SporeModder FX/Styles"
+          cp SporeModder-FX/reg_cnv.txt "SporeModder FX/reg_cnv.txt"
+          cp SporeModder-FX/reg_file.txt "SporeModder FX/reg_file.txt"
+          cp SporeModder-FX/reg_property.txt "SporeModder FX/reg_property.txt"
+          cp SporeModder-FX/reg_simulator.txt "SporeModder FX/reg_simulator.txt"
+          cp SporeModder-FX/reg_simulator_stub.txt "SporeModder FX/reg_simulator_stub.txt"
+          cp SporeModder-FX/reg_type.txt "SporeModder FX/reg_type.txt"
+          cp SporeModder-FX-jar/sporemodderfx.jar "SporeModder FX/SporeModderFX.jar"
+          \cp -r SporeModder-FX/Styles "SporeModder FX/Styles"
 
       - name: Commit changes to Updater repo
         run: |
