--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           rm -rf .git
           git init -b main
-          git remote add origin https://github.com/emd4600/SporeModder-FX-Updater.git
+          git remote add origin git@github.com:emd4600/SporeModder-FX-Updater.git
           git fetch
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
