--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,10 @@ jobs:
 
       - name: Commit changes to Updater repo
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          #git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          #git config --local user.name "github-actions[bot]"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add --all "SporeModder FX"
           git add src/sporemodder/updater/resources/reg_file.txt
           git add src/sporemodder/updater/resources/reg_property.txt
