--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,17 +56,17 @@ jobs:
 
       - name: Update reg_file.txt
         run: |
-          echo $"\n" >> src/sporemodder/updater/resources/reg_file.txt
+          echo $'\n' >> src/sporemodder/updater/resources/reg_file.txt
           bash collect_reg_changes.sh reg_file.txt >> src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
         run:  |
-          echo $"\n" >> src/sporemodder/updater/resources/reg_property.txt
+          echo $'\n' >> src/sporemodder/updater/resources/reg_property.txt
           bash collect_reg_changes.sh reg_property.txt >> src/sporemodder/updater/resources/reg_property.txt
 
       - name: Update reg_type.txt
         run:  |
-          echo $"\n" >> src/sporemodder/updater/resources/reg_type_noforce.txt
+          echo $'\n' >> src/sporemodder/updater/resources/reg_type_noforce.txt
           bash collect_reg_changes.sh reg_type.txt >> src/sporemodder/updater/resources/reg_type_noforce.txt
 
       - name: Download SporeModderFX.jar
