--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Package and commit SporeModder FX Udpate
+name: Package and commit SporeModder FX Update
 on:
   workflow_dispatch:
 
@@ -41,29 +41,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Updater
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
         with:
           repository: emd4600/SporeModder-FX-Updater
           ref: main
 
-      - name: Checkout SporeModder-FX
-        uses: actions/checkout@v4
-        with:
-          repository: emd4600/SporeModder-FX
-          fetch-depth: 0
+      #- name: Build Updater
+      #  run: git clone git@github.com:emd4600/SporeModder-FX-Updater .
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - run: pwd
-      - run: ls
-      - run: ls ..
+      - name: Checkout SporeModder-FX
+        run: git clone https://github.com/emd4600/SporeModder-FX SporeModder-FX
 
       - name: Update reg_file.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_file.txt >> ../Updater/src/sporemodder/updater/resources/reg_file.txt
+        run: |
+          echo $'\n' >> src/sporemodder/updater/resources/reg_file.txt
+          bash collect_reg_changes.sh reg_file.txt >> src/sporemodder/updater/resources/reg_file.txt
 
       - name: Update reg_property.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_property.txt >> ../Updater/src/sporemodder/updater/resources/reg_property.txt
+        run:  |
+          echo $'\n' >> src/sporemodder/updater/resources/reg_property.txt
+          bash collect_reg_changes.sh reg_property.txt >> src/sporemodder/updater/resources/reg_property.txt
 
       - name: Update reg_type.txt
-        run: bash ../Updater/collect_reg_changes.sh reg_type.txt >> ../Updater/src/sporemodder/updater/resources/reg_type_noforce.txt
+        run:  |
+          echo $'\n' >> src/sporemodder/updater/resources/reg_type_noforce.txt
+          bash collect_reg_changes.sh reg_type.txt >> src/sporemodder/updater/resources/reg_type_noforce.txt
 
       - name: Download SporeModderFX.jar
         uses: actions/download-artifact@v3
@@ -72,34 +76,26 @@ jobs:
           path: SporeModder-FX-jar
 
       - name: Copy sporemodderfx.jar
-        run: cp SporeModder-FX-jar/sporemodderfx.jar ../Updater/src/sporemodder/updater/resources/SporeModderFX.jar
-
-      - name: Set up JDK 11 for x64
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          architecture: x64
-
-      - name: Build with Maven
-        run: cd ../Updater && mvn -B package --file pom.xml
+        run: cp SporeModder-FX-jar/sporemodderfx.jar src/sporemodder/updater/resources/SporeModderFX.jar
 
       - name: Update release files
         run: |
-          cp reg_cnv.txt "../Updater/SporeModder FX/reg_cnv.txt"
-          cp reg_file.txt "../Updater/SporeModder FX/reg_file.txt"
-          cp reg_property.txt "../Updater/SporeModder FX/reg_property.txt"
-          cp reg_simulator.txt "../Updater/SporeModder FX/reg_simulator.txt"
-          cp reg_simulator_stub.txt "../Updater/SporeModder FX/reg_simulator_stub.txt"
-          cp reg_type.txt "../Updater/SporeModder FX/reg_type.txt"
-          cp SporeModder-FX-jar/sporemodderfx.jar "../Updater/SporeModder FX/SporeModderFX.jar"
-          \cp -r Styles "../Updater/SporeModder FX/Styles"
+          cp SporeModder-FX/reg_cnv.txt "SporeModder FX/reg_cnv.txt"
+          cp SporeModder-FX/reg_file.txt "SporeModder FX/reg_file.txt"
+          cp SporeModder-FX/reg_property.txt "SporeModder FX/reg_property.txt"
+          cp SporeModder-FX/reg_simulator.txt "SporeModder FX/reg_simulator.txt"
+          cp SporeModder-FX/reg_simulator_stub.txt "SporeModder FX/reg_simulator_stub.txt"
+          cp SporeModder-FX/reg_type.txt "SporeModder FX/reg_type.txt"
+          cp SporeModder-FX-jar/sporemodderfx.jar "SporeModder FX/SporeModderFX.jar"
+          \cp -r SporeModder-FX/Styles "SporeModder FX/Styles"
 
       - name: Commit changes to Updater repo
         run: |
-          cd ../Updater
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+          #git config user.name github-actions
+          #git config user.email github-actions@github.com
+          #git remote set-url origin git@github.com:emd4600/SporeModder-FX-Updater
           git add --all "SporeModder FX"
           git add src/sporemodder/updater/resources/reg_file.txt
           git add src/sporemodder/updater/resources/reg_property.txt
@@ -108,13 +104,12 @@ jobs:
           git add src/sporemodder/updater/resources/Styles/syntax.css
           git add src/sporemodder/updater/resources/Styles/Dark/basic.css
           git add src/sporemodder/updater/resources/Styles/Dark/syntax.css
-          git add src/sporemodder/updater/resources/SporeModderFX.jar
+          git add -f src/sporemodder/updater/resources/SporeModderFX.jar
           git commit -m "Bump updater"
-          git push
-
+          git push origin main
+          
       - name: Push changes to Updater repo
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
-          directory: ../Updater
