--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
   build_smfx:
     name: Build SporeModder-FX
     runs-on: ubuntu-latest
+    with:
+      APP_GITHUB_ID: ${{ secrets.APP_GITHUB_ID }}
     steps:
       - name: Checkout SporeModder-FX
         uses: actions/checkout@v4
@@ -18,6 +20,8 @@ jobs:
         run: |
           version=$( bash calculate_new_version.sh )
           echo "version=$version" >> $GITHUB_OUTPUT
+
+      - run: echo "$APP_GITHUB_ID" > src/sporemodder/resources/githubAction.yml
 
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
