--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - env:
           APP_GITHUB_ID: ${{ secrets.APP_GITHUB_ID }}
-        run: echo "$APP_GITHUB_ID" > src/sporemodder/resources/githubAction.yml
+        run: echo "$APP_GITHUB_ID" > src/sporemodder/resources/githubApp.txt
 
       - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
